# ArmedPlatformer

./: Прочти меня.md
docs/: Elementy urovnä.txt  Oružije.txt  Vragi.txt  Zadumka igry.txt
src/: Assert.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.hpp  Fixed.hpp  Host.cpp  Host.hpp  Hud.cpp  Hud.hpp  Log.cpp  Log.hpp  Mat.hpp  Menu.cpp  Menu.hpp  Model.hpp  Player.cpp  Player.hpp  Rand.cpp  Rand.hpp  SaveLoad.cpp  SaveLoad.hpp  SaveLoadStreams.cpp  SaveLoadStreams.hpp  SoundOut.cpp  SoundOut.hpp  SoundProcessor.cpp  SoundProcessor.hpp  SoundsGeneration.cpp  SoundsGeneration.hpp  SystemEvent.cpp  SystemEvent.hpp  SystemWindow.cpp  SystemWindow.hpp  TilesMap.cpp  TilesMap.hpp  World.cpp  World.hpp  WorldView.cpp  WorldView.hpp  (+1 more)
src/Maps/: 00.hpp  01.hpp  02.hpp  03.hpp  04.hpp  05.hpp  Maps.hpp  Test.hpp
src/Models/: Models.hpp
